# wisper4npu

./: CLAUDE.md  LICENSE  README.md  SETUP.md  pyproject.toml  whisper.npu.code-workspace
flm_voice/: __main__.py  config.py  daemon.py  ipc.py  output.py  recorder.py  transcriber.py  vad.py
flm_voice/service/: flm-voice.service
packaging/: flm-voice.service  wayscribe.spec
scripts/: bench_transcribe.py  build-rpm.sh
tests/: test_language.py  test_recorder.py  test_skeleton.py  test_vad.py
