[project]
name = "wayscribe"
version = "0.2.0"
description = "Hotkey-driven voice-to-text for KDE Plasma Wayland, backed by FastFlowLM Whisper on AMD NPU"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vladislav Zverev" }]
dependencies = [
    "sounddevice>=0.4",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
wayscribe = "wayscribe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wayscribe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
